--- a/package.json
+++ b/package.json
@@ -8,10 +8,9 @@
   },
   "scripts": {
     "test": "mocha --require test/setup.js",
-    "start": "node src/server.js",
+    "start": "node src/practice.js",
     "predeploy": "npm audit",
-    "deploy": "git push heroku master",
-    "dev": "nodemon src/server.js"
+    "deploy": "git push heroku master"
   },
   "author": "",
   "license": "ISC",
@@ -20,7 +19,9 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "helmet": "^4.1.1",
+    "knex": "^0.21.8",
     "morgan": "^1.10.0",
+    "pg": "^8.4.2",
     "winston": "^3.3.3"
   },
   "devDependencies": {
